Added get branchs implementations
